
* Cloud Volumes ONTAP 패키지 사용
* 높은 수준의 사용법
* 스토리지 VM 사용량
* 볼륨 사용량


자세한 내용은 다음을 참조하세요.  https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-manage-capacity-licenses.html["용량 기반 라이선스 관리"^] .



=== 이제 마켓플레이스 구독 없이 BlueXP 액세스할 때 알림이 표시됩니다.

이제 마켓플레이스 구독 없이 BlueXP 에서 Cloud Volumes ONTAP 액세스할 때마다 알림이 표시됩니다.  알림에는 "이 작업 환경에 대한 마켓플레이스 구독은 Cloud Volumes ONTAP 이용 약관을 준수해야 합니다."라고 명시되어 있습니다.



== 2023년 4월 4일



=== AWS 중국 지역 지원

Cloud Volumes ONTAP 9.12.1 GA부터 AWS에서 중국 지역이 다음과 같이 지원됩니다.

* 단일 노드 시스템이 지원됩니다.
* NetApp 에서 직접 구매한 라이선스가 지원됩니다.


지역별 가용성은 다음을 참조하세요. https://bluexp.netapp.com/cloud-volumes-global-regions["Cloud Volumes ONTAP 위한 글로벌 지역 맵"^] .



== 2023년 4월 3일

Connector 3.9.28 릴리스에는 다음과 같은 변경 사항이 도입되었습니다.



=== 이제 Google Cloud에서 토리노 지역이 지원됩니다.

이제 토리노 지역은 Google Cloud for Cloud Volumes ONTAP 및 Connector for Cloud Volumes ONTAP 9.12.1 GA 이상에서 지원됩니다.



=== BlueXP digital wallet 개선

이제 BlueXP digital wallet 마켓플레이스 비공개 제안으로 구매한 라이선스 용량이 표시됩니다.

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-manage-capacity-licenses.html["계정에서 사용된 용량을 보는 방법을 알아보세요"^] .



=== 볼륨 생성 중 주석 지원

이 릴리스에서는 API를 사용하여 Cloud Volumes ONTAP FlexGroup 볼륨이나 FlexVol volume 생성할 때 주석을 추가할 수 있습니다.



=== Cloud Volumes ONTAP 개요, 볼륨 및 집계 페이지에 대한 BlueXP 사용자 인터페이스 재설계

이제 BlueXP 에는 Cloud Volumes ONTAP 개요, 볼륨 및 집계 페이지에 대한 사용자 인터페이스가 재설계되었습니다.  타일 ​​기반 디자인은 더 나은 사용자 경험을 위해 각 타일에 더욱 포괄적인 정보를 제공합니다.

image:screenshot-resource-page-rn.png["이 스크린샷은 Cloud Volumes ONTAP 개요 페이지에서 재설계된 BlueXP 사용자 인터페이스를 보여줍니다.  다양한 타일은 스토리지 효율성, 버전, 용량 분포, Cloud Volumes ONTAP 배포에 대한 정보, 볼륨, 집계, 복제 및 백업을 보여줍니다."]



=== Cloud Volumes ONTAP 을 통해 볼 수 있는 FlexGroup 볼륨

ONTAP 시스템 관리자나 ONTAP CLI를 통해 직접 생성된 FlexGroup 볼륨은 이제 BlueXP 의 재설계된 볼륨 타일을 통해 볼 수 있습니다.  FlexVol 볼륨에 대해 제공되는 정보와 동일하게 BlueXP 전용 볼륨 타일을 통해 생성된 FlexGroup 볼륨에 대한 자세한 정보를 제공합니다.


NOTE: 현재는 BlueXP 에서만 기존 FlexGroup 볼륨을 볼 수 있습니다.  BlueXP 에서 FlexGroup 볼륨을 생성하는 기능은 현재 제공되지 않지만 향후 릴리스에서 제공될 예정입니다.
