@@ -4,7 +4,7 @@ permalink: task-updating-ontap-cloud.html
 keywords: update, updating, upgrading, upgrade, software, downgrade, downgrading, FTP, HTTP, mediator, local image, revert, reverting, downgrading, cloud backup 
 summary: NetApp Console 에서 Cloud Volumes ONTAP 업그레이드하여 최신 새 기능과 향상된 기능을 활용하세요.  소프트웨어를 업그레이드하기 전에 Cloud Volumes ONTAP 시스템을 준비해야 합니다. 
 ---
-= Cloud Volumes ONTAP 소프트웨어 업그레이드
+= Cloud Volumes ONTAP 업그레이드
 :hardbreaks:
 :allow-uri-read: 
 :nofooter: 
